# gedmin.as

./: .gitignore  .htaccess  CNAME  Makefile  TODO.txt  about-en.html  about-lt.html  build.py  checklinks.sh  diary-00-09.html  diary-00-10.html  diary.html  front.css  front.html  index-en.html  index-lt.html  index.html  keybase.txt  linkcheckerrc  live.py  mg-ssh-key.txt  news-lt.html  pyproject.toml  setup.cfg  z2b
about/: index-en.html  index-lt.html
av/: index-en.html  index-lt.html  index.html
books/: index-en.html  index-lt.html  index.html
calc/: index-en.html  index-lt.html  index.html
debian/: index-lt.html  index.html
debs/: apt-checkupdates_0.3-1_i386.deb  apt-checkupdates_0.4-1.dsc  apt-checkupdates_0.4-2.dsc  apt-checkupdates_0.5-1.dsc  apt-checkupdates_0.6_i386.changes  index-en.html  index-lt.html  index.html  ltz2003_0.1.0-1.dsc  ltz2003_0.1.0-1_i386.deb  mg-keymap_0.9.5-1_i386.deb  mgacct_0.4-1_i386.deb  mgstats_0.12-1.dsc
demo/: index-en.html  index-lt.html  index.html
denmark/: index-en.html  index-lt.html  index.html
disasm/: index-en.html  index-lt.html
docs/: index-en.html  index-lt.html  index.html
fonts/: index-en.html  index-lt.html  index.html
icewm/: index-en.html  index-lt.html  index.html  keys  menu.src  mg.theme  patch-1.0.0.mg.lastconsole.1  patch-1.0.4.mg.ppp.2  toolbar
kernel/: index-lt.html  index.html  isofs-2.2.9mg1.patch
keyutils/: index-en.html  index-lt.html  index.html
links/: index-lt.html  index.html  links-0.91-mg.underline.1
lit-con/: README.keymaps  README.lt  index-en.html  index-lt.html  (+1 more)
(+613 files in other folders)
